--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "~11.11.3",
     "@emotion/styled": "~11.11.0",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "~5.15.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "~4.14.202",
     "@typescript-eslint/eslint-plugin": "~6.17.0",
     "@typescript-eslint/parser": "~6.17.0",
     "eslint": "~8.56.0",
